# ONNXRuntime

./: Cargo.toml  README.md  build_and_bind.bat
python_binding/: main.py
src/: binding_python.rs  graph.rs  lib.rs  main.rs  node.rs  onnx_proto3.rs  onnx_runtime.rs  operations.rs  tests.rs
src/operations/: add.rs  averagepool.rs  concat.rs  conv.rs  dropout.rs  gemm.rs  input.rs  local_response_normalization.rs  matmul.rs  maxpool.rs  relu.rs  reshape.rs  soft_max.rs  start.rs
src/tests/: general_tests.rs
