[package]
name = "onnx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.28.0"
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
protoc-rust = "2.28.0"
ndarray= {version = "0.15.6", features = ["rayon"]}
crossbeam = "0.8"
rayon = "1.5"
rand = "0.8"
pyo3 = { version = "0.19.2"}
numpy = "0.19.0"

[lib]
name = "onnx_rust2py"
crate-type = ["cdylib"]



